2006-07-02  Colin Marquardt  <colin@marquardt-home.de>

	* AUTHORS, src/ui/dialog/aboutbox.cpp: Add Niko, Hugo, Dale and
   	  Gustav.

2006-06-30  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/connector-context.cpp, src/widgets/toolbox.cpp:
	  Add undo event descriptions for the connector context.

2006-06-27  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/macosx/ScriptExec/main.c:
	  Add some quotes to fix a problem for people on OS X with 
	  spaces in their home directory path.  Fixes bug #1512019.

2006-06-21  Colin Marquardt  <colin@marquardt-home.de>

	* share/templates/DVD_cover_regular_300dpi.svg,
	  share/templates/DVD_cover_slim_300dpi.svg,
	  share/templates/DVD_cover_superslim_300dpi.svg,
	  share/templates/DVD_cover_ultraslim_300dpi.svg:
	  DVD templates by Aleksandar Urosevic. Closes #1507164.

2006-06-19  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/macosx/Resources/script,
	  packaging/macosx/Resources/bin/inkscape:

	  Improve quoting of shell variables.

	* packaging/macosx/ScriptExec/ScriptExec.xcodeproj/project.pbxproj:

	  Xcode 2 project file for the OS X launcher.  This will build a
	  Universal version of the launcher by default.  The project files for
	  different versions are named differently, so this will be picked up and
	  used if the package builder has a sufficiently new version of Xcode.

	* packaging/macosx/ScriptExec/ScriptExec.xcode/sveinbjornt.pbxuser,
	  packaging/macosx/ScriptExec/ScriptExec.xcode/voisine.pbxuser:

	  Remove unnecessary user preference files.

	* Makefile.am:
	
	  Update the Xcode project files included when creating releases.

2006-06-13  Jon A. Cruz  <jon@joncruz.org>

	* TRANSLATORS, src/ui/dialog/aboutbox.cpp:

	  Applied patch #1505715.

2006-06-13  Jon A. Cruz  <jon@joncruz.org>

	* packaging/macosx/Resources/etc/fonts/fonts.conf:

	  Applied patch #1505765.

2006-06-09  Jon A. Cruz  <jon@joncruz.org>
